Fix text overflow in CSS

--- a/public/style.css
+++ b/public/style.css
@@ -187,6 +187,7 @@ body {
 
 .chatbox__messg-item-messg {
   margin: 0 1rem;
+  max-width: 20rem;
   word-wrap: break-word;
   -webkit-box-flex: 1;
       -ms-flex: 1;
