--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -99,9 +99,17 @@
         &-messg {
             // background-color: rgb(29, 29, 29);s
             margin: 0 1rem;
+            max-width: 20rem;
             word-wrap: break-word;
             flex: 1;
             color: rgb(195, 138, 114);
+
+            // overflow-wrap: break-word;
+            // word-wrap: break-word;
+            // -webkit-hyphens: auto;
+            // -ms-hyphens: auto;
+            // -moz-hyphens: auto;
+            // hyphens: auto;
         }
 
     }
